Fix spacing and gutters

--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,17 @@ html {
 
 .list-group-item-inline, .header-nav-ul-li-a {
   display: inline-block;
-  color: #d89fb0;
+  color: #b64c6e;
   text-decoration: none;
 }
 
 .header-nav-ul-li-a {
-  border-bottom: 1px solid #d89fb0;
+  border-bottom: 1px solid #b64c6e;
 }
 
 .header-nav-ul-li-a:hover {
-  color: #b64c6e;
-  border-bottom: 1px solid #b64c6e;
+  color: #860927;
+  border-bottom: 1px solid #860927;
 }
 
 hr {
